# ironpost

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REVIEW_FIXES_SUMMARY.md  demo.tape  ironpost.toml  ironpost.toml.example  justfile
.cargo/: config.toml
.claude/agents/: architect.md  implementer.md  reviewer.md  tester.md  writer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release.yml
.knowledge/: architecture.md  ci-guidelines.md  container-guard-design.md  daemon-design.md  development-workflow.md  ebpf-guide.md  log-pipeline-design.md  plugin-architecture.md  review-checklist.md  rust-conventions.md  sbom-scanner-design.md  security-patterns.md  testing-strategy.md
.reviews/: phase-1-core.md  phase-10-prometheus-metrics.md  phase-2-ebpf.md  phase-3-log-pipeline.md  phase-4-container-guard.md  phase-5-sbom-scanner.md  phase-6-integration.md  phase-7-codex-demo-fixes.md  phase-7-codex-reverify-summary.md  phase-7-codex-review.md  phase-7-e2e.md  phase-8-codex-review.md  phase-8-release.md  phase-9-collector-spawn.md  phase11-fuzzing-final.md
.tasks/: BOARD.md
.tasks/logs/: 2026-02-08-phase1-core.md  2026-02-08-phase2-ebpf-architect.md  2026-02-08-phase2-ebpf-tester.md  2026-02-09-T3-6-test-enhancement.md  2026-02-09-phase2-ebpf-review-fixes.md  2026-02-09-phase2-ebpf-review.md  2026-02-09-phase3-additional-fixes.md  2026-02-09-phase3-integration-tests.md  2026-02-09-phase3-log-pipeline-review.md  2026-02-09-phase3-review-fix.md  2026-02-09.md  2026-02-10-daemon-cli-tests-fix.md  2026-02-10-daemon-cli-tests.md  2026-02-10-phase4-additional-edge-cases.md  2026-02-10-phase4-container-guard-implementation.md  2026-02-10-phase4-container-guard-scaffolding.md  2026-02-10-phase4-critical-fixes.md  2026-02-10-phase4-documentation.md  2026-02-10-phase4-rustc-warnings-fix.md  2026-02-10-phase4-test-enhancement.md  2026-02-10-phase5-documentation.md  2026-02-10-phase5-implementation.md  2026-02-10-phase5-review-fixes.md  2026-02-10-phase5-sbom-scanner-scaffolding.md  2026-02-10-phase5-test-enhancement.md  2026-02-10-phase6-cli-implementation.md  2026-02-10-phase6-daemon-design.md  (+27 more)
crates/container-guard/: Cargo.toml  README.md
crates/container-guard/benches/: policy_bench.rs
crates/container-guard/src/: config.rs  docker.rs  enforcer.rs  error.rs  event.rs  guard.rs  isolation.rs  lib.rs  monitor.rs  policy.rs
crates/container-guard/tests/: integration_tests.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: event_bench.rs
crates/core/src/: config.rs  error.rs  event.rs  lib.rs  metrics.rs  pipeline.rs  plugin.rs  types.rs
crates/core/tests/: config_integration.rs
crates/ebpf-engine/: Cargo.toml  README.md
crates/ebpf-engine/ebpf/: Cargo.toml
crates/ebpf-engine/ebpf-common/: Cargo.toml
crates/ebpf-engine/ebpf-common/src/: lib.rs
crates/ebpf-engine/ebpf/src/: main.rs
crates/ebpf-engine/src/: config.rs  detector.rs  engine.rs  lib.rs  stats.rs
crates/log-pipeline/: Cargo.toml  README.md
crates/log-pipeline/benches/: parser_bench.rs  rule_bench.rs
crates/log-pipeline/src/: alert.rs  buffer.rs  collector.rs  config.rs  error.rs  lib.rs  parser.rs  pipeline.rs  rules.rs  storage.rs
crates/log-pipeline/src/collector/: event_receiver.rs  file.rs  mod.rs  syslog_tcp.rs  syslog_udp.rs
crates/log-pipeline/src/parser/: json.rs  mod.rs  syslog.rs
crates/log-pipeline/src/rule/: loader.rs  matcher.rs  mod.rs  types.rs
crates/log-pipeline/tests/: integration_tests.rs
crates/sbom-scanner/: Cargo.toml  README.md
crates/sbom-scanner/benches/: scanner_bench.rs
crates/sbom-scanner/src/: config.rs  error.rs  event.rs  lib.rs  parser.rs  sbom.rs  scanner.rs  types.rs
crates/sbom-scanner/src/parser/: cargo.rs  mod.rs  npm.rs
crates/sbom-scanner/src/sbom/: cyclonedx.rs  mod.rs  spdx.rs  util.rs
crates/sbom-scanner/src/vuln/: db.rs  mod.rs  version.rs
crates/sbom-scanner/tests/: cve_matching_tests.rs  integration_tests.rs
crates/sbom-scanner/tests/fixtures/: package-lock.json  test-vuln-db.json
docker/: Dockerfile  docker-compose.demo.yml  docker-compose.yml
docs/: architecture.md  benchmarks.md  configuration.md  demo.md  design-decisions.md  getting-started.md  module-guide.md  testing.md
fuzz/: .gitignore  Cargo.toml  README.md  run_fuzz_all.sh
fuzz/corpus/cargo_lock/: minimal  small_lockfile  with_dependencies
fuzz/corpus/json/: array_values  complete  nested  null_fields  unix_epoch
fuzz/corpus/npm_lock/: minimal  scoped_package  v2_format
fuzz/corpus/rule_yaml/: empty_conditions.yml  minimal.yml  service-manipulation.yml  ssh-brute-force.yml  ssh-root-login.yml  unauthorized-sudo.yml  unicode.yml
fuzz/corpus/syslog/: bsd_basic  bsd_leap_year  nilvalue  pri_boundary_high  pri_boundary_low  rfc5424_basic  rfc5424_sd  sd_escape  utf8_multibyte
fuzz/fuzz_targets/: cargo_lock.rs  json_parser.rs  npm_lock.rs  parser_router.rs  rule_matcher.rs  rule_yaml.rs  sbom_roundtrip.rs  syslog_parser.rs
hooks/: pre-commit  pre-push
ironpost-cli/: Cargo.toml  README.md
ironpost-cli/src/: cli.rs  error.rs  main.rs  output.rs
ironpost-cli/src/commands/: config.rs  mod.rs  rules.rs  scan.rs  start.rs  status.rs
ironpost-cli/tests/: config_command_tests.rs
ironpost-daemon/: Cargo.toml  README.md
ironpost-daemon/src/: cli.rs  health.rs  lib.rs  logging.rs  main.rs  metrics_server.rs  orchestrator.rs
ironpost-daemon/src/modules/: container_guard.rs  ebpf.rs  log_pipeline.rs  mod.rs  sbom_scanner.rs
ironpost-daemon/tests/: channel_integration_tests.rs  config_tests.rs  health_tests.rs  metrics_server_tests.rs  module_init_tests.rs  orchestrator_tests.rs  pid_file_tests.rs
ironpost-daemon/tests/e2e/: main.rs
ironpost-daemon/tests/e2e/helpers/: assertions.rs  config.rs  events.rs  mock_pipeline.rs  mod.rs
ironpost-daemon/tests/e2e/scenarios/: config_error.rs  fault_isolation.rs  lifecycle.rs  mod.rs  pipeline_flow.rs  sbom_flow.rs  shutdown.rs
scripts/: export-copilot-pr-comments.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+46 files in other folders)
