[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ebpf-engine",
    "crates/ebpf-engine/ebpf",
    "crates/ebpf-engine/ebpf-common",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]
default-members = [
    "crates/core",
    "crates/ebpf-engine",
    "crates/ebpf-engine/ebpf-common",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
