[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ebpf-engine",
    "crates/ebpf-engine/ebpf",
    "crates/ebpf-engine/ebpf-common",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]
# macOS에서는 eBPF 관련 크레이트 제외 (Linux 전용)
# Linux에서 전체 빌드 시: cargo build --workspace
default-members = [
    "crates/core",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
semver = "1"
tempfile = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
