[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ebpf-engine",
    "crates/ebpf-engine/ebpf-common",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]
# eBPF 프로그램(crates/ebpf-engine/ebpf)은 BPF 타겟 전용이므로 workspace에서 제외
exclude = [
    "crates/ebpf-engine/ebpf",
]
# eBPF 빌드는 `cargo run -p xtask -- build-ebpf`를 통해 별도로 수행
# macOS에서는 eBPF 관련 크레이트 제외 (Linux 전용)
# Linux에서 전체 빌드 시: cargo build --workspace
default-members = [
    "crates/core",
    "crates/log-pipeline",
    "crates/container-guard",
    "crates/sbom-scanner",
    "ironpost-cli",
    "ironpost-daemon",
    "xtask",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
toml = "1.0"
uuid = { version = "1", features = ["v4"] }
semver = "1"
tempfile = "3"
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
