[package]
name = "ironpost-cli"
version = "0.1.0"
edition = "2024"
description = "Ironpost CLI -- command-line interface for security monitoring platform"

[dependencies]
ironpost-core = { path = "../crates/core" }
ironpost-log-pipeline = { path = "../crates/log-pipeline" }
ironpost-container-guard = { path = "../crates/container-guard" }
ironpost-sbom-scanner = { path = "../crates/sbom-scanner" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
colored = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# eBPF engine is Linux-only
[target.'cfg(target_os = "linux")'.dependencies]
ironpost-ebpf-engine = { path = "../crates/ebpf-engine" }

[dev-dependencies]
tempfile = "3.14"
