[package]
name = "ironpost-daemon"
version = "0.1.0"
edition = "2024"
description = "Ironpost daemon -- module orchestration and event bus management"

[dependencies]
ironpost-core = { path = "../crates/core" }
ironpost-log-pipeline = { path = "../crates/log-pipeline" }
ironpost-container-guard = { path = "../crates/container-guard" }
ironpost-sbom-scanner = { path = "../crates/sbom-scanner" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# eBPF engine is Linux-only
[target.'cfg(target_os = "linux")'.dependencies]
ironpost-ebpf-engine = { path = "../crates/ebpf-engine" }

[dev-dependencies]
tempfile = "3.14"
bytes = { workspace = true }
