[package]
name = "ironpost-ebpf-engine"
version = "0.1.0"
edition = "2024"
description = "Ironpost eBPF 기반 네트워크 패킷 탐지 엔진"

[dependencies]
ironpost-core = { path = "../core" }
ironpost-ebpf-common = { path = "ebpf-common", features = ["user"] }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"

[dev-dependencies]
tempfile = "3.14"
