[package]
name = "ironpost-log-pipeline"
version = "0.1.0"
edition = "2024"
description = "Ironpost 로그 수집·파싱·분석·저장 파이프라인"

[dependencies]
ironpost-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
nom = "8"
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
