[package]
name = "ironpost-sbom-scanner"
version = "0.1.0"
edition = "2024"
description = "Ironpost SBOM 생성 및 CVE 취약점 스캔"

[dependencies]
ironpost-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# SemVer version comparison
semver = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
